--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
+.header{
+	position: fixed;
+}
 .html{
   float: left;
   margin-left: 98px;
   margin-top: 21px;
 }
 .list{
+	font-family: 'Roboto', sans-serif;
   display: inline-block;
   padding-left: 35px;
+  font-size: 24px;
 
 }
 .clear{
@@ -16,4 +21,71 @@
     float:left;
     margin-left: 103px;
     margin-top: 35px;
+}
+
+.photo{
+	position: relative;
+   float: left;
+   margin-top: 130px;
+   margin-left: 98px;
+
+}
+.sec{
+
+	position: absolute;
+    top:0;
+	left: 0;
+
+	
+}
+.seca{
+	font-family: 'Roboto', sans-serif;
+	margin-left:  30px;
+	margin-top: 289px;
+	font-size: 30px;
+    color: #ffffff;
+}
+.secb{
+	font-family: 'Roboto', sans-serif;
+	margin-top: 331px;
+	margin-left:  30px;
+	font-size: 30px;
+	color: #ffffff;
+	
+}
+.secc{
+	font-family: 'Roboto', sans-serif;
+	margin-top: 365px;
+    font-size: 30px;
+	margin-left: 30px;
+	color: #ffffff;
+}
+.secd{
+	font-family: 'Roboto', sans-serif;
+	margin-left: 30px;
+	margin-top: 402px;
+	font-size: 30px;
+	color: #ffffff;
+}
+.blue{
+	margin-top: 30px;
+	width: 1366px;
+	height: 500px;
+	background-color: #363E97;
+}
+
+.vid{
+	padding-top: 30px;
+   margin-left: 100px;
+	font-family: 'Roboto', sans-serif;
+	color: #ffffff;
+    font-size: 24px;   
+}
+.block{
+	width: 570px;
+	height: 320px;
+	background-color: #ffffff;
+	margin-left: 98px;
+	margin-top: 30px;
+
 }
