--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
 	margin-top: 28px;
 	display: inline-block;
 }
-.grey{
+.cyan{
 	width: 1366px;
 	height: 450px;
 	background-color: #BDCCD4;
@@ -121,31 +121,39 @@
 .newsp{
 	font-family: 'Roboto', sans-serif;
 	color: #3D58A6;
-	font-size: 24px;
-	
+	font-size: 24px;	
 	margin-left: 99px;
 	padding-top: 31px;
+}
+.imgs{
+	float: left;
+	margin-top: 28px; 
+	margin-left: 99px;
+	
+}
+.img2{
+	padding-left: 26px;
+}
+.article1{
+	width: 270px;
+	height: 60px;
+    background-color: #ffffff;
+    float: left;
+    margin-left: 98px;
 
 }
-.img1{
-	
-	margin-top: 28px;
-	margin-left: 98px;
-
-}
-.img1p{
-	
+.article2{
 	width: 270px;
 	height: 60px;
 	background-color: #ffffff;
-	margin-left: 98px;
-
-
+	float: left;
+	margin-left: 30px;
 }
-.greyp{
+.black{
 	font-family: 'Roboto', sans-serif;
-	padding-left: 14px;
-	padding-top: 14px;
 	font-size: 22px;
-	color: black;
+    color: #333333;
+    margin-left: 14px;
+    margin-top: 14px;
+
 }
